[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sglang-router"
version = "0.3.0"
description = "DEPRECATED: This package has been renamed to sgl-model-gateway. Please install sgl-model-gateway instead."
authors = [
    {name = "Simo Lin", email = "linsimo.mark@gmail.com"},
    {name = "Chang Su", email = "mckvtl@gmail.com"},
    {name = "Keyang Ru", email = "rukeyang@gmail.com"},
    {name = "Byron Hsu", email = "byronhsu1230@gmail.com"}
]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 7 - Inactive",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "sgl-model-gateway>=0.3.0",
]

[project.scripts]
sglang-router = "sglang_router.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sglang_router*"]
